<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="65dp"
        android:text="@string/selectpeerfil"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="133dp"
        android:layout_height="38dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="34dp"
        android:text="@string/createprofile"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvperfil"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/lvperfil"
        android:layout_width="364dp"
        android:layout_height="193dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.121" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="285dp"
        android:layout_height="62dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nameuser"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvperfil"
        app:layout_constraintVertical_bias="0.28"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btncrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crearperfil1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        app:layout_constraintVertical_bias="0.374" />

</androidx.constraintlayout.widget.ConstraintLayout>